# c_microservices

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.c
api/: Dockerfile  main.py  requirements.txt
c_service/: main.c
c_service/libs/: config.c  config.h
libs/: database.c
transaction_service/: CMakeLists.txt  Dockerfile  README.md  build.sh  install-deps.sh  main.c  schema.sql
transaction_service/app/: application.c  application.h  config.c  config.h  database.c  database.h  global.h  queue.c  queue.h  transaction.c  transaction.h
transaction_service/libs/: database.c  database.h
